CHANGES
*******

0.4 (unreleased)
================

* Bugfix: Wrong page number when using paging.
* Bugfix: Wrong dateFormat in generated metadata 

0.3 (2009-10-15)
================

* Bugfix: ExtDirectStore returns wrong 'total' parameter
* Add a direct access to the descriptor API with an optional parameter
  `format=json` to get the descriptor as JavaScript code or as a JSON packet

0.2 (2009-09-11)
================

* Faulty setup.py

0.1 (2009-09-11)
================

* Initial public release
