@@ -4,8 +4,9 @@ CHANGES
 0.4 (unreleased)
 ================
 
-* Bugfix: Wrong page number when using paging.
-* Bugfix: Wrong dateFormat in generated metadata 
+* Bugfix: Wrong page number when using paging
+* Bugfix: Wrong dateFormat in generated metadata
+* `extdirect` serializer has changed how it handles foreign keys
 
 0.3 (2009-10-15)
 ================
